{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 48,
  "lineage": "186fcb7d-e211-e151-3d06-2ae38ab23465",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f1022dcc85d6298",
            "arn": "arn:aws:ec2:us-east-1:087843402235:elastic-ip/eipalloc-02f1022dcc85d6298",
            "association_id": "eipassoc-00455856a689a98c0",
            "domain": "vpc",
            "id": "eipalloc-02f1022dcc85d6298",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06b2416955cd2771c",
            "private_dns": "ip-172-20-1-196.ec2.internal",
            "private_ip": "172.20.1.196",
            "public_dns": "ec2-34-228-130-149.compute-1.amazonaws.com",
            "public_ip": "34.228.130.149",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0157af9aea2eef346",
            "arn": "arn:aws:ec2:us-east-1:087843402235:instance/i-0096b0637aac9bd13",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0096b0637aac9bd13",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02b77fb76edfdbb15"
              }
            ],
            "primary_network_interface_id": "eni-02b77fb76edfdbb15",
            "private_dns": "ip-172-20-1-121.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.20.1.121",
            "public_dns": "ec2-52-90-53-1.compute-1.amazonaws.com",
            "public_ip": "52.90.53.1",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09e0abbfd6b7dc5fd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018e98f84ff053aaf",
            "tags": {
              "Name": "bastion-server"
            },
            "tags_all": {
              "Name": "bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07ec814ccef422025"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "i-0096b0637aac9bd13",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion-host",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:internet-gateway/igw-03a4aa519243e4067",
            "id": "igw-03a4aa519243e4067",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "tags": {
              "Name": "3-tier-ig"
            },
            "tags_all": {
              "Name": "3-tier-ig"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/backend-alb/90c91faf9aa4c586",
            "arn_suffix": "app/backend-alb/90c91faf9aa4c586",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "backend-alb-996129532.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/backend-alb/90c91faf9aa4c586",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0da9c357e3397f06e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018e98f84ff053aaf"
              },
              {
                "subnet_id": "subnet-0610d155130a49558"
              }
            ],
            "subnets": [
              "subnet-018e98f84ff053aaf",
              "subnet-0610d155130a49558"
            ],
            "tags": {
              "Name": "ALB-backend"
            },
            "tags_all": {
              "Name": "ALB-backend"
            },
            "vpc_id": "vpc-065d30257529caf00",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/backend-alb/90c91faf9aa4c586"
          },
          "dependencies": [
            "aws_lb_target_group.back_end",
            "aws_security_group.alb-backend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/frontend-alb/8ba47c899fa0d7ec",
            "arn_suffix": "app/frontend-alb/8ba47c899fa0d7ec",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-alb-1191195740.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/frontend-alb/8ba47c899fa0d7ec",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0ff68ef16a2b0aec7"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018e98f84ff053aaf"
              },
              {
                "subnet_id": "subnet-0610d155130a49558"
              }
            ],
            "subnets": [
              "subnet-018e98f84ff053aaf",
              "subnet-0610d155130a49558"
            ],
            "tags": {
              "Name": "ALB-Frontend"
            },
            "tags_all": {
              "Name": "ALB-Frontend"
            },
            "vpc_id": "vpc-065d30257529caf00",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/frontend-alb/8ba47c899fa0d7ec"
          },
          "dependencies": [
            "aws_lb_target_group.front_end",
            "aws_security_group.alb-frontend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:listener/app/backend-alb/90c91faf9aa4c586/0adba973d5988a94",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/backend-tg/bbfa6899a7adec22",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:087843402235:listener/app/backend-alb/90c91faf9aa4c586/0adba973d5988a94",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/backend-alb/90c91faf9aa4c586",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:listener/app/backend-alb/90c91faf9aa4c586/0adba973d5988a94"
          },
          "dependencies": [
            "aws_lb.back_end",
            "aws_lb_target_group.back_end",
            "aws_security_group.alb-backend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:listener/app/frontend-alb/8ba47c899fa0d7ec/eaaf2deb32f0c42b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/frontend-tg/9c719c053243c2b2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:087843402235:listener/app/frontend-alb/8ba47c899fa0d7ec/eaaf2deb32f0c42b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/frontend-alb/8ba47c899fa0d7ec",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:listener/app/frontend-alb/8ba47c899fa0d7ec/eaaf2deb32f0c42b"
          },
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb-frontend-sg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "back_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/backend-tg/bbfa6899a7adec22",
            "arn_suffix": "targetgroup/backend-tg/bbfa6899a7adec22",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/backend-tg/bbfa6899a7adec22",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/backend-alb/90c91faf9aa4c586"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/backend-tg/bbfa6899a7adec22"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/frontend-tg/9c719c053243c2b2",
            "arn_suffix": "targetgroup/frontend-tg/9c719c053243c2b2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/frontend-tg/9c719c053243c2b2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:087843402235:loadbalancer/app/frontend-alb/8ba47c899fa0d7ec"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:087843402235:targetgroup/frontend-tg/9c719c053243c2b2"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "cust-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02f1022dcc85d6298",
            "association_id": "eipassoc-00455856a689a98c0",
            "connectivity_type": "public",
            "id": "nat-00675ac1a359954d7",
            "network_interface_id": "eni-06b2416955cd2771c",
            "private_ip": "172.20.1.196",
            "public_ip": "34.228.130.149",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018e98f84ff053aaf",
            "tags": {
              "Name": "3-tier-nat"
            },
            "tags_all": {
              "Name": "3-tier-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-prvt-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:route-table/rtb-0e1b6a01b9fb61235",
            "id": "rtb-0e1b6a01b9fb61235",
            "owner_id": "087843402235",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00675ac1a359954d7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-tier-privt-rt"
            },
            "tags_all": {
              "Name": "3-tier-privt-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "rtb-0e1b6a01b9fb61235",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three-tier-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:route-table/rtb-0757266c10d2047d3",
            "id": "rtb-0757266c10d2047d3",
            "owner_id": "087843402235",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a4aa519243e4067",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "3-tier-pub-rt"
            },
            "tags_all": {
              "Name": "3-tier-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "rtb-0757266c10d2047d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096418e62df84fdd7",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1b6a01b9fb61235",
            "subnet_id": "subnet-0aecad3f916c11d8e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt3",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c64cb7237436270",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1b6a01b9fb61235",
            "subnet_id": "subnet-0f11cc01dd4944fcd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt4",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-5a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1660589b31fddaa",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1b6a01b9fb61235",
            "subnet_id": "subnet-0f9ef372436531950"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt5",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-6b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c8f113d9f0fc9e3",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1b6a01b9fb61235",
            "subnet_id": "subnet-0ef0ed748089d8a2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt6",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-7a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095948d8bef285e9f",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1b6a01b9fb61235",
            "subnet_id": "subnet-09ddbeee57f22304d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt7",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prvivate-8b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054646c5e38605573",
            "region": "us-east-1",
            "route_table_id": "rtb-0e1b6a01b9fb61235",
            "subnet_id": "subnet-060e7f0d9a19647ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.eip",
            "aws_nat_gateway.cust-nat",
            "aws_route_table.three-tier-prvt-rt",
            "aws_subnet.prvt8",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c764062c43b9401",
            "region": "us-east-1",
            "route_table_id": "rtb-0757266c10d2047d3",
            "subnet_id": "subnet-018e98f84ff053aaf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_route_table.three-tier-pub-rt",
            "aws_subnet.pub1",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00856ce24794c9686",
            "region": "us-east-1",
            "route_table_id": "rtb-0757266c10d2047d3",
            "subnet_id": "subnet-0610d155130a49558"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.three-tier-ig",
            "aws_route_table.three-tier-pub-rt",
            "aws_subnet.pub2",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:security-group/sg-0da9c357e3397f06e",
            "description": "Allow inbound traffic ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da9c357e3397f06e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-backend-sg",
            "name_prefix": "",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-backend-sg"
            },
            "tags_all": {
              "Name": "alb-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "sg-0da9c357e3397f06e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-frontend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:security-group/sg-0ff68ef16a2b0aec7",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff68ef16a2b0aec7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-frontend-sg",
            "name_prefix": "",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-frontend-sg"
            },
            "tags_all": {
              "Name": "alb-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "sg-0ff68ef16a2b0aec7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:security-group/sg-0d542385db2b3f9bc",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d542385db2b3f9bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "backend-server-sg",
            "name_prefix": "",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "backend-server-sg"
            },
            "tags_all": {
              "Name": "backend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "sg-0d542385db2b3f9bc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb-backend-sg",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:security-group/sg-07ec814ccef422025",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07ec814ccef422025",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic from web layer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "appserver-SG",
            "name_prefix": "",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-host-server-sg"
            },
            "tags_all": {
              "Name": "bastion-host-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "sg-07ec814ccef422025",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "book-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:security-group/sg-080682d3226ab7e3f",
            "description": "Allow inbound ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080682d3226ab7e3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "mysql/aroura",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "book-rds-sg",
            "name_prefix": "",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "book-rds-sg"
            },
            "tags_all": {
              "Name": "book-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "sg-080682d3226ab7e3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:security-group/sg-080b2c87777daba03",
            "description": "Allow inbound traffic ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080b2c87777daba03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "frontend-server-sg",
            "name_prefix": "",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "frontend-server-sg"
            },
            "tags_all": {
              "Name": "frontend-server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-065d30257529caf00"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "sg-080b2c87777daba03",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb-frontend-sg",
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-0aecad3f916c11d8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aecad3f916c11d8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-3a"
            },
            "tags_all": {
              "Name": "prvt-3a"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-0aecad3f916c11d8e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-0f11cc01dd4944fcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f11cc01dd4944fcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-4b"
            },
            "tags_all": {
              "Name": "prvt-4b"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-0f11cc01dd4944fcd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-0f9ef372436531950",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ef372436531950",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-5a"
            },
            "tags_all": {
              "Name": "prvt-5a"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-0f9ef372436531950",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-0ef0ed748089d8a2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef0ed748089d8a2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-6b"
            },
            "tags_all": {
              "Name": "prvt-6b"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-0ef0ed748089d8a2b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-09ddbeee57f22304d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ddbeee57f22304d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-7a"
            },
            "tags_all": {
              "Name": "prvt-7a"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-09ddbeee57f22304d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prvt8",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-060e7f0d9a19647ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060e7f0d9a19647ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prvt-8b"
            },
            "tags_all": {
              "Name": "prvt-8b"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-060e7f0d9a19647ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-018e98f84ff053aaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018e98f84ff053aaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pub-1a"
            },
            "tags_all": {
              "Name": "pub-1a"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-018e98f84ff053aaf",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:subnet/subnet-0610d155130a49558",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0610d155130a49558",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "087843402235",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "pub-2b"
            },
            "tags_all": {
              "Name": "pub-2b"
            },
            "vpc_id": "vpc-065d30257529caf00"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "subnet-0610d155130a49558",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.three-tier"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three-tier",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:087843402235:vpc/vpc-065d30257529caf00",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-06eb60ef74e88b63c",
            "default_route_table_id": "rtb-0e37ffdfc24349bf6",
            "default_security_group_id": "sg-01327a5f7a0fe1769",
            "dhcp_options_id": "dopt-05ab32495fc57f9b3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-065d30257529caf00",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e37ffdfc24349bf6",
            "owner_id": "087843402235",
            "region": "us-east-1",
            "tags": {
              "Name": "3-tietr-vpc"
            },
            "tags_all": {
              "Name": "3-tietr-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "087843402235",
            "id": "vpc-065d30257529caf00",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}